fix overflow

--- a/src/app/components/main/request/request-form/request-form.component.css
+++ b/src/app/components/main/request/request-form/request-form.component.css
@@ -22,3 +22,24 @@
 .banner-text h2{color:#fff; font-weight:600;}
 .banner-text h2:after{content:" "; width:100px; height:5px; background:#FFF; display:block; margin-top:20px; border-radius:3px;}
 .banner-text p{color:#fff;}
+
+
+
+
+  @media screen and (max-width: 600px) {
+    #login-section{
+      width: 90%;
+    }
+
+    #login-partial{
+      padding-right: 5px;
+      padding-left: 5px;
+      padding-top: 15px;
+    }
+
+    .login-block{
+      padding-top: 10px;
+    }
+  }
+
+
