--- a/src/app/components/nav/nav.component.css
+++ b/src/app/components/nav/nav.component.css
@@ -10,3 +10,9 @@
   }
 }
 */
+@media screen and (max-width: 600px) {
+
+  .nav-logo{
+    width: 200px;
+  }
+}
